<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/cardview_compat_inset_shadow">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="@dimen/logoLoginWidth"
                android:layout_height="@dimen/logoLoginHeigth"
                android:layout_marginTop="40dp"
                android:src="@drawable/nutech"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

                    <LinearLayout
                        android:gravity="top"
                        android:id="@+id/layoutLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        >

                        <LinearLayout
                            android:id="@+id/linearEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            >

                                <EditText
                                    android:id="@+id/inputEmail"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    android:fontFamily="@font/helvetica_regular"
                                    android:hint="@string/username"
                                    android:maxLength="128"
                                    android:padding="10dp"
                                    android:background="@drawable/edittext_custom_normal"
                                    android:textColor="@color/black"
                                    android:inputType="text"
                                    android:privateImeOptions="nm"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:typeface="monospace" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            >

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@null"
                                android:gravity="center"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp"
                                android:hint="@string/password"
                                app:errorTextAppearance="@style/ErrorText"
                                app:hintEnabled="false"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="@color/colorDarkGrey">
                                <EditText
                                    android:id="@+id/inputPassword"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/edittext_custom_normal"
                                    android:fontFamily="@font/helvetica_regular"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:maxLength="25"
                                    android:padding="10dp"
                                    android:textColor="@color/black"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:typeface="monospace"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:errorEnabled="true"
                                app:errorTextAppearance="@style/ErrorText">

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutError2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:errorEnabled="true"
                                app:errorTextAppearance="@style/ErrorText">

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardView"
                                android:layout_width="150dp"
                                android:layout_height="45dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:gravity="center"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="5dp">

                                <LinearLayout
                                    android:id="@+id/topLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:weightSum="1">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1">

                                        <TextView
                                            android:id="@+id/txtValue"
                                            style="@style/TextAppearance.AppCompat.Medium"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:fontFamily="@font/itc_avant_garde"
                                            android:gravity="center"
                                            android:text="@string/login"
                                            android:textColor="@color/colorWhite" />

                                    </LinearLayout>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </LinearLayout>



            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/layoutLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="@string/newRegisText"
                    android:textColor="@color/colorBlack"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/textLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:text="Tekan"
                    android:textColor="@color/colorBlack"
                    android:typeface="monospace" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>