<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp5"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="@dimen/cardViewRadius"
            android:layout_marginTop="@dimen/dp30"
            app:cardElevation="@dimen/dp10"
            app:contentPadding="@dimen/dp15"
            app:cardUseCompatPadding="true"
            android:gravity="center">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="monospace"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/helvetica_regular"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:layout_marginBottom="50dp"
                    android:padding="@dimen/dp5"
                    android:text="@string/profil"/>

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="monospace"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/helvetica_regular"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:padding="@dimen/dp5"
                    android:text=""/>

                <TextView
                    android:id="@+id/userFirstName"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="monospace"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/helvetica_regular"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:padding="@dimen/dp5"
                    android:text=""/>

                <TextView
                    android:id="@+id/userLastName"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="monospace"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/helvetica_regular"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold"
                    android:padding="@dimen/dp5"
                    android:text=""/>


                <LinearLayout
                    android:id="@+id/linearUpdate"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/card_green_border"
                        android:weightSum="1">

                        <LinearLayout
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/dp50"
                            android:layout_height="@dimen/dp50"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtMenu6"
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:textColor="@color/colorAccent"
                                android:typeface="monospace"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:fontFamily="@font/helvetica_regular"
                                android:layout_height="match_parent"
                                android:textStyle="bold"
                                android:textSize="@dimen/sp16"
                                android:text="@string/updateprofil"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        app:cardBackgroundColor="@color/colorAccent"
                        android:gravity="center">
                        <LinearLayout
                            android:id="@+id/topLayout"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:weightSum="1">

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="0dp">
                                <TextView
                                    android:id="@+id/txtValue"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:textColor="@color/colorWhite"
                                    android:typeface="monospace"
                                    style="@style/TextAppearance.AppCompat.Medium"
                                    android:fontFamily="@font/itc_avant_garde"
                                    android:layout_height="match_parent"
                                    android:text="@string/logout"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>