<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true"
    android:id="@+id/parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/credentials_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp15">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/layoutLogin">

                        <TextView
                            android:layout_marginBottom="25dp"
                            android:id="@+id/imageHeader"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/itc_avant_garde"
                            android:gravity="center"
                            android:text="@string/updateprofil"
                            android:textSize="@dimen/activityTitle"
                            android:typeface="monospace" />


                        <LinearLayout
                            android:id="@+id/linearNamaDepan"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:gravity="center"
                            >
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutNamaDepan"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center"
                                android:layout_gravity="center"
                                app:hintEnabled="false"
                                android:padding="4dp"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp"
                                app:errorTextAppearance="@style/ErrorText">

                                <EditText
                                    android:id="@+id/inputNamaDepan"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/edittext_custom_normal"
                                    android:fontFamily="@font/helvetica_regular"
                                    android:hint="@string/firstname"
                                    android:inputType="text|textCapWords"
                                    android:maxLength="25"
                                    android:padding="10dp"
                                    android:textColor="@color/black"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:typeface="monospace"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutErrorNamaDepan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:errorEnabled="true"
                                app:errorTextAppearance="@style/ErrorText">

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearNamaBelakang"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:gravity="center"
                            >
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutNamaBelakang"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center"
                                android:layout_gravity="center"
                                app:hintEnabled="false"
                                android:padding="4dp"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp"
                                app:errorTextAppearance="@style/ErrorText">

                                <EditText
                                    android:id="@+id/inputNamaBelakang"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/edittext_custom_normal"
                                    android:fontFamily="@font/helvetica_regular"
                                    android:hint="@string/lastname"
                                    android:inputType="text|textCapWords"
                                    android:maxLength="25"
                                    android:padding="10dp"
                                    android:textColor="@color/black"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:typeface="monospace"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputLayoutErrorNamaBelakang"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:errorEnabled="true"
                                app:errorTextAppearance="@style/ErrorText">

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardView"
                                android:layout_width="150dp"
                                android:layout_height="45dp"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="5dp"
                                app:cardBackgroundColor="@color/colorAccent"
                                android:gravity="center">
                                <LinearLayout
                                    android:id="@+id/topLayout"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:weightSum="1">

                                    <LinearLayout
                                        android:layout_weight="1"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp">
                                        <TextView
                                            android:id="@+id/txtValue"
                                            android:gravity="center"
                                            android:layout_width="match_parent"
                                            android:textColor="@color/colorWhite"
                                            android:typeface="monospace"
                                            style="@style/TextAppearance.AppCompat.Medium"
                                            android:fontFamily="@font/itc_avant_garde"
                                            android:layout_height="match_parent"
                                            android:text="@string/updateprofil"/>

                                    </LinearLayout>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>